<resources>
    <string name="app_name">WalletOK</string>
    <string name="wallet_name_textview">Кошелек 1</string>
    <string name="amount_of_money_textview">0 ₽</string>
    <string name="income_text_view">Доход</string>
    <string name="expenses_text_view">Расход</string>
    <string name="refilling">Пополнение</string>
    <string name="spending">Траты</string>
    <string name="no_entries_text_view">У вас пока нет записей</string>
    <string name="add_transaction">Добавить операцию</string>
    <string name="settings">Settings</string>
    <string name="welcome_title">Добро пожаловать\nв КошелОК </string>
    <string name="welcome_text">Тут вы сможете контролировать свои\nдоходы и расходы</string>
    <string name="sign_in">Войти с помощью Google</string>
    <string name="submit">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="name">Название</string>

    <string name="choose_transaction_type">Выберите тип операции</string>
    <string name="choose_category_type">Выберите тип категории</string>
    <string name="choose_transaction_category">Выберите категорию</string>

    <string name="enter_value">Введите сумму</string>
    <string name="transaction_value">Сумма операции</string>
    <string name="new_transaction">Новая операция</string>
    <string name="new_category">Новая категория</string>
    <string name="edit_transaction">Редактирование операции</string>

    <string name="unset">Не выбрано</string>
    <string name="choose_color">Задать цвет</string>

    <string name="basic">Основные</string>
    <string name="additional">Дополнительные настройки</string>
    <string name="value">Сумма</string>
    <string name="type">Тип</string>
    <string name="category">Категория</string>
    <string name="category_name">Название категории</string>
    <string name="think_name">Придумайте название</string>
    <string name="create_category">Создать категорию</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="transaction_date">Дата операции</string>

    <string name="salary">Зарплата</string>
    <string name="twelve_o_clock">12:00</string>
    <string name="wallet_lose_limit_text_view">100000</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="error_sign_in">Ошибка авторизации</string>
    <string name="not_available">Функция пока недоступна</string>
    <string name="delete">Удалить</string>

    <string name="close">Закрыть</string>
    <string name="now">Сейчас</string>

    <string name="zero">0</string>
    <string name="wallet_rub">₽</string>
    <string name="retry">Повторить</string>
    <string name="default_error_message">Что-то пошло не так</string>
    <string name="network_error_message">Отсутствует соединение с интернетом</string>
    <string name="wallets_overall_balance">Общий баланс</string>
    <string name="overall_income">Общий доход</string>
    <string name="limit_is_exceeded">Превышен лимит</string>
    <string name="client_id">"1046661703173-3iaos9geq21oi76ct19gki6797ooq3rd.apps.googleusercontent.com"</string>
    <string name="new_wallet">Новый кошелек</string>
    <string name="create_wallet">Создать кошелек</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="wallet_name">Название кошелька</string>
    <string name="enter_wallet_name">Введите название</string>
    <string name="show_more">Показать больше</string>
    <string name="wallet_limit">Лимит на траты</string>
    <string name="russian_rouble">Российский рубль</string>
    <string name="euro">Евро</string>
    <string name="usd_name">Доллар США</string>
    <string name="currency">Валюта</string>
</resources>